--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import url("swiper/css");
+@import url("swiper/css/pagination");
 
 body {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
